GDP PT 2 DESIGN C2 START

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -183,6 +183,8 @@ One benefit of analysing at this smaller scope is that it allows for a detailed 
 ![Figure 5.feature Activity system 2 - Mid-level activity system of game making Constructing a game feature by feature](./Pictures/At_dia_2_v3.png){width=95%}
 
 
+
+
 <!-- ( NOTE - or at least as as a key unit of analysis).  -->
 WHEN TO INTRODUCE GERM CELL?
 The significance of activity at this scope is reflected in my proposal of the implementation of GDPs as a germ cell concept within the theoretical framework of this thesis. A more granular exploration of this scope of activity helps explore both the developmental and analytical aspects of the germ cell concept. The object of activity at this level is less complex, as the primary motivation is to implement or alter a design pattern in the participant’s game on a pair or individual level and therefore incorporates less cultural and social factors.
@@ -219,7 +221,13 @@ My initial focus in the early stages of P1 was to create a welcoming, low-pressu
 MOVE SOME OF THIS TO INTRODUCTION
 -->
 
-As anticipated, the introduction of textual programming with JavaScript into the game-making process contributed to a range of accumulating tensions. These are initially described in broad terms before focusing on those related to tool use. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements.
+![Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v2.png){width=95%}
+
+
+This figure is presented to illustrate this area of contradiction as an accumulation of tensions between systems elements. There were tensions between tools at use and the objective of participants including: a lack of supporting documentation, a tension between the introduced authentic code language and novice level, and occasional mismatches between features requested by the community and the limits of the code library. In addition tensions emerged between the organising process at a community level and the object of effectively working on the game code including: a systemic misalignment between the lack of digital project management and the barrier of lack of facilitator time to support learners.
+
+
+The introduction of textual programming with JavaScript into the game-making process contributed to a range of accumulating tensions. These are initially described in broad terms before focusing on those related to tool use. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements.
 
 T1 - At times, participant expectations exceeded what was realistically achievable within the scope of the game-making project, a tension explored further in Appendix 5.bee. While it was clear that participants needed to develop their coding abilities, the emerging, informal, experimental nature of the learning environment seemed to me to not suit whole-class instruction. This intuition was supported by my reflections on two attempts to deliver whole group presentations of key coding concepts, which I judged in my journal, based on visual cues of engagement, to be unwelcome interruptions to participants’ making activities. Instead, I addressed problems on an individual basis. However, as  more issues arose, I became overwhelmed by the group dynamics and technical demands on my time. After one session, I emailed participants (see Appendix.narrative2), expressing that I felt daunted by the task of facilitating the integration of the disparate creative elements being produced into a cohesive project. I asked parents for ideas and support in organising and bringing more order to group and planning processes. These developing tensions can be framed as contradictions between the tools available to participants and the object of actualising their ideas and graphical assets in code form. Additionally, my limited time as a facilitator highlights a dysfunctional relationship between the division of labour and the object.
 
@@ -233,8 +241,8 @@ As the sessions continued, with many creatively processes happening simultaneous
 <!-- A crisis point developed (despite the input of parents) to help an organisational process. While participants were being supported to develop assets in the form or game characters and ideas for features were being documented via lists, participants  did not have a working either a working knowledge of the tools used, or a process to start to build that knowledge. My own process of self research and informed tinkering drew on years of experience and was therefore not suitable as participants did not share those coding repertoires or familiarity with coding tools. While the suggested tools were theoretically available to the participants online, they were therefore stuck nevertheless.  -->
 
 
-![tensions with tools](./Pictures/At_tension_1_v2.png){width=95%}
-Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process
+
+
 
 <!-- To address the last point, I worked with groups to help them adapt a game template from phaser tutorial and input their own graphics to at least create a static prototype / sketch of the game. -->
 
@@ -259,7 +267,7 @@ On completion of P1, I reflected on the design challenge involved to address the
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
 
-#### Design description: Using a starter game template within a code playground, and graphical asset authouring tools
+#### Design description: Using a starter game template within a code playground, and graphical asset authoring tools
 
 <!-- Addressing the evolution in design and use of code and asset authoring tools, While the code playground and the code template within in it are two separate tools, from the perspective of the learner, they were experienced jointly. As such, I cover them together in this section. -->
 
@@ -338,14 +346,12 @@ Technically, each level is a JavaScript object consisting of a data array of 12 
 #### Brief section on Impact
 
 INCLUDE SOME INTERVIEW DATA IF USEFUL.
-IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC. 
+IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
 
+WHICH DESIGN AIM / FEATURE?
 While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support. This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a way of making his game distinct from others, illustrates the impact of this technical adaptation on the evolution of social coding processes a theme which is explored in more detail in a following section.
 
-
-
-
-
+The introduction of a half-baked template and the UMC approach had the unintended consequence of reducing the average working group size and also helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group. A negative consequence of smaller group sizes and thus having more games being worked on was the increased demand on my time as a technical troubleshooter for code problems. The following section addresses this tension and others related to the introduction of supporting forms of documentation.
 
 
 <!-- ![simple game template](./Pictures/simple_game_template_3a.png){width=95%} -->
@@ -423,13 +429,17 @@ Participants spent a widely different length of time creating these graphics for
 
 
 <!-- The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions experienced by participants in P1. -->
-
 <!-- Before outlining tensions related to technical demands on facilitator time in this section and the subsequent introduction of supporting forms of documentation, some brief observations on impact are useful.  -->
-The introduction of a half-baked template and the UMC approach had the unintended consequence of reducing the average working group size and also helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group. A negative consequence of smaller group sizes and thus having more games being worked on was the increased demand on my time as a technical troubleshooter for code problems. This section addresses this tension and others related to the introduction of supporting forms of documentation.
-
 <!-- The in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts  of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction [@laurillard2020significance], an alignment explored in more detail in this chapters' discussion. -->
 
-While the in-tool scaffolding within the primary tool outlined in the previous section reduced initial reliance on facilitator instruction [@laurillard2020significance], it did not assist participants in implementing new features or adding code structures to their games (e.g., the _Create_ stage of UMC). In P1 and early in P2, my guidance and often direct help was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair. During the development period after P1, I reflected on the tension between learner agency, particularly the role of divergent participant learning paths, and the role of facilitator-led instruction and support, which reappeared consistently in my notes at this time. My reflection was partly driven by two attempts in P1 to deliver whole-class instruction on key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that learner engagement was low, and I surmised that this might be because learners viewed the instruction as not immediately relevant, alien to their favoured hands-on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need. During this development period, I struggled to reconcile my desire to support this responsive approach with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs. The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2, and I finally created three main sources of documentation: quick start cards, written instructions, and code snippets, which are outlined in the following section.
+
+While the in-tool scaffolding within the code template outlined in the previous section reduced reliance on facilitator instruction [@laurillard2020significance] for most learners, it did not assist participants in implementing new features or adding code structures to their games (e.g., the _Create_ stage of UMC). In P1 and early in P2, my guidance and often direct help was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair.
+EXAMPLE?
+
+During the development period after P1, I reflected on the tension between learner agency, particularly the role of divergent participant learning paths, and the role of facilitator-led instruction and support, which reappeared consistently in my notes at this time. My reflection was partly driven by two attempts in P1 to deliver whole-class instruction on key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that learner engagement was low, and I surmised that this might be because learners viewed the instruction as not immediately relevant, alien to their favoured hands-on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need. During this development period, I struggled to reconcile my desire to support this responsive approach with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs.
+
+DESIGN 
+The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2, and I finally created three main sources of documentation: quick start cards, written instructions, and code snippets, which are outlined in the following section.
 
 <!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
 <!-- DOES THE LR EXPLORE THIS TENSION? -->
@@ -647,6 +657,10 @@ DOES THIS LIVE HERE OR ABOVE?
 Key observations outlined in the table above align with the supported benefits outlined in research on the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] and the specific technique of starting with a half baked game template [@grizioti_game_2018-1].
 
 The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the _use_ and _modify_ stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way.
+
+REVISE THIS PART
+Kynigos [-@kynigos_black-and-white_2004-1] explores the tension between more targeted/restrictive and more adaptable technology toolsets using a white-box, black-box distinction (explored in the literature review), noting the difficulty of communicating the value of non-commodified, adaptable toolsets despite their exploratory potential. The design of this research's learning template can be seen as a half-baked Microworld [@kynigos_half-baked_2007], with the varied affordances of the design interpreted as invitations to contribute to an improvable boundary object [@kynigos_half-baked_2007, p.336]. This focus thus motivates and facilitates a discussion on a shared experience in a way that aligns with the sociocultural focus of this study.
+
 
 THIS IS EXPLORED LATER.
 In addition, the framework of UMC highlights the benefits of a stepped, stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation.
