--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -219,22 +219,17 @@ PULL OUT AN EXAMPLE -->
 
 THIS NEEDS REWRITING - THERE IS PERSONAL APPROPRIATION - BUT NOT NECESSARILY ALIGNED WITH CURRICULUM.
 
-As outlined in Chapter 2, the focus on curricular knowledge and related skills developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the less explored areas of the social and cultural aspects of the coding process of novices.
-
 <!-- As such, the design of this study does not fully address the exploration of the personal appropriation plane of activity.  -->
 
-In a classroom setting, group activity would likely incorporate a structural motivation to understand and utilise knowledge related to computational thinking concepts or similar curricular content.  
-
-In this informal learning context, participants did not request exploration of concepts aligned with the computing curriculum, instead being driven more by a practical desire to make a game using the tools provided.
-In Chapter 5, the role of GDPs as motivational goals was described.
-
-Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking and other curricular concepts.
+<!-- In a classroom setting, group activity would likely incorporate a structural motivation to understand and utilise knowledge related to computational thinking concepts or similar curricular content.   -->
 
 
+As outlined in Chapter 2, there is a deficit in existing research on digital coding and game making on  areas of the social and cultural aspects of the coding process of novices compared to a greater focus on curricular knowledge and related skills developed by participants [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. In this informal learning context, the overall motivation of participant had a greater alignment with making an engaging game compared to learning knowledge within the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts.
 
-### On learning map.
 
-Given the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x.
+<!-- In P4 aGiven the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills,  -->
+
+As I began to review video data, I mapped curriculum-oriented concepts that emerged in the game making process of this research. To do this I drew on the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. This process resulted in a learning map of curricular concepts included here as Table 6.x.
 
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
@@ -252,17 +247,15 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 <!-- NOTE - this map focuses on more concrete concepts,  -->
 
-Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in the integration of concepts into an informal context, and draws on the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. There is a tension in the evolution of this learning map, one familiar to teachers using project- and play-based approaches, between the naturalistic approach made possible by the non-formal learning environment and the desire to align with curricular concepts.
+
+Appendix.learningmap explores in more detail the evolution of this map. A summary here follows.
+
+- The map balances skills, concrete aspects of coding concepts and syntax, it excludes abstract definition of CT, but includes similarly abstract systems concepts.
+- It aims to address tensions in the integration of concepts into an informal context, specifically, a tension or paradox [cite] common in project-based approaches in more formal settings, between the an exploratory learning approach and a possibility or need to align with curricular concepts.
+
 PLAY PARADOX - DEVELOP  
-
 I propose that this play paradox is addressed by orienting the leading/motivational activity of the learning design to be one aligned with the underlying goals of the participants. In this case to add features to their game.
-
 AS ALIGNED WITH AVOIDING PRINCIPLES FIRST APPROACH IN SGD.
-
-
-
-THIS NEEDS MOVING TO CHAPTER 5 OR CHAPTER 7
-It is of value to compare this observational approach to the design-driven process typified by research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts. In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. While there are similarities between this design and the constructionist ethos behind LOGO, the leading motivation of this study is the creation of and acculturation to a game-making community. Kynigos [-@kynigos_black-and-white_2004-1] explores the tension between more targeted/restrictive and more adaptable technology toolsets using a white-box, black-box distinction (explored in the literature review), noting the difficulty of communicating the value of non-commodified, adaptable toolsets despite their exploratory potential. The design of this research's learning template can be seen as a half-baked Microworld [@kynigos_half-baked_2007], with the varied affordances of the design interpreted as invitations to contribute to an improvable boundary object [@kynigos_half-baked_2007, p.336]. This focus thus motivates and facilitates a discussion on a shared experience in a way that aligns with the sociocultural focus of this study.
 
 
 <!-- RETURN TO THIS TO REPRESENT SOME OF THE CHALLENGES AND DIFFICULTY OF SWIMMING AGAINST THE STREAM IN TERMS OF COMMODIFICIATION OF TOOLS -->
@@ -276,20 +269,33 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 <!-- NOTE - (Additional examples may be included in Appendix.learning) -->
 
 
-### The interrelationship of GDPs and the development of technical processes
+### The interrelationship of GDPs and the development of personal appropriation of skills and processes
 
-I now turning to mediational uses of GDPs in this personal plane.
+While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community.
 
-Given the greater focus on social and cultural domains of thesis, I focus on one aspect of personal appropriation in this section: namely the technical implementation of coding structures.
-WHY JUST ONE DIMENSION?
+Given the overall focus on  social and cultural domains in thesis, there are the limitations in this the methodology of this research to assess personal appropriate. Specifically there was no testing involved and the interview focus was on socio-cultural aspects. Given this, I focus limited  aspect of personal appropriation in this section to observable novel skills: namely the code patching, debugging and the development of digital literacy skills.
 
-The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community.
+**Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
+
+Turning to the practice of code patching, a guided technical process designed to scaffold the coding process (see Glossary and Chapter 2), video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. An example of code patching in practice can be seen in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1a and Appendix.patching).
+SEE ALSO PREVIOUS CHAPTER.
+
+
+Toby's success in using the code patching technique was supported by the UMC based structure of the game template in line with the UMC principles explored in the previous chapter and the high level of contextualisation provided by GDPs as a guiding framework in the learning design. This is illustrated in V1 when Toby alters the imported code producing a type of programming error I refer to as a glitch. This specific error occurs when the game continues to function but exhibits an unintended effect (see V1a). The glitch triggered an initial investigation prompted Toby to seek my assistance and required an iterative process of revision and cross-referencing with the original code snippet. From this and similar observations I propose that the tight coupling between code implementation and target behaviour in this case structured within GDPs scaffolds the debugging process and can be a valuable tool for facilitators.
+
+Additionally the key affordances of the learning design including the starting template code snippets and the resulting code patching process appear to encourage the creation of glitch errors. The data in this section is further supported by observations on the growing diversity of helping strategies in response to different types of errors discussed in Appendix Debugging. I also explain the patching process in greater depth to participants in an extract from Vignette 9 (V9a). In the commentary (V9b) I propose that noticing celebrating and exploring the sources of unintended behaviours may function as an inclusive strategy to mitigate the potentially frustrating process of debugging. Considering the bi-directional process aspects of personal appropriation can also be inferred from the interpersonal interactions explored in the following section.
+
+**Digital / Web Literacy**
+
+Belshaw?
 
 To integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix: Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with the ability to navigate internet browser tabs, this facilitated movement between computer code, game prototypes, and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in Vignette 1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading, and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored in later sections. In line with CHAT theory, this can be interpreted as the gradual operationalisation of actions that initially required more explicit guidance, as discussed by Leontiev [@leontiev_activity_2009].
 
-While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to. In this case, the community in question was the game-making community. In this process, GDPs functioned as both conceptual tools and structured project stages, facilitating interpersonal knowledge exchange, as explored in the following example. In Vignette 5 (sections V5.a and V5.c), Madiha(p) seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. For instance, changing pen colours in the graphical tool is a process that Nasrin has already internalised and performs effortlessly, whereas Madiha is still deliberately working to build her competency. Nasrin has fully operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
+While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to.
 
+In this case, the community in question was the game-making community. In this process, GDPs functioned as both conceptual tools and structured project stages, facilitating interpersonal knowledge exchange, as explored in the following example. In Vignette 5 (sections V5.a and V5.c), Madiha(p) seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. For instance, changing pen colours in the graphical tool is a process that Nasrin has already internalised and performs effortlessly, whereas Madiha is still deliberately working to build her competency. Nasrin has fully operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
 
+There is a cross over here with guided participation, and this aspect is explored in a later section on this chapter.
 
 
   <!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
@@ -319,15 +325,14 @@ While the use of new techniques was driven by the implementation of GDPs, the fo
   <!-- NOTE - In vignette 4.a.5 -->
 
 
-<!-- **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors** -->
+A SORT OF CONCLUSION / LINK.
 
-Turning to the practice of code patching, a guided technical process designed to scaffold the coding process (see Glossary and Chapter 2), video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. An example of code patching in practice can be seen in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1a and Appendix.patching).
+It is of value to compare the observational process of creating the learning map to the more intentional, concept-driven design approach described in research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts.  In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988].
 
+There are similarities between this design and the structural constructionist techniques involved in designing Microworlds [Laurillard], However, as the leading motivation of this study is the creation of and acculturation to a game-making community, the process can be seen differently.  Take code patching for an example, the design is oriented to support this practice which is taken on, however this is a procedural skill rather than more abstract knowledge. This is not to say future iterations of this design could not facilitate the exploration of abstract concepts more explicitly. For example, there is significant potential to explore systems thinking concepts (see appendix.map). Indeed, similar work using the Game Start Mechanic software takes such an approach.
 
+LINK ? 
 
-Toby's success in using the code patching technique was supported by the UMC based structure of the game template in line with the UMC principles explored in the previous chapter and the high level of contextualisation provided by GDPs as a guiding framework in the learning design. This is illustrated in V1 when Toby alters the imported code producing a type of programming error I refer to as a glitch. This specific error occurs when the game continues to function but exhibits an unintended effect (see V1a). The glitch triggered an initial investigation prompted Toby to seek my assistance and required an iterative process of revision and cross-referencing with the original code snippet. From this and similar observations I propose that the tight coupling between code implementation and target behaviour in this case structured within GDPs scaffolds the debugging process and can be a valuable tool for facilitators.
-
-Additionally the key affordances of the learning design including the starting template code snippets and the resulting code patching process appear to encourage the creation of glitch errors. The data in this section is further supported by observations on the growing diversity of helping strategies in response to different types of errors discussed in Appendix Debugging. I also explain the patching process in greater depth to participants in an extract from Vignette 9 (V9a). In the commentary (V9b) I propose that noticing celebrating and exploring the sources of unintended behaviours may function as an inclusive strategy to mitigate the potentially frustrating process of debugging. Considering the bi-directional process aspects of personal appropriation can also be inferred from the interpersonal interactions explored in the following section.
 
 
 <!-- NOTE Check is there  STILL material to  INTEGRATE FROM Appendix.debugging -->
