--- a/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
@@ -6,35 +6,45 @@
     -   [Chapter Introduction](#chapter-introduction)
     -   [Vignette and broad analysis using an analysis of activity
         systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
-    -   [Narrative exploration of key contradictions emerging in the
-        game-making learning
-        design](#narrative-exploration-of-key-contradictions-emerging-in-the-game-making-learning-design)
-        -   [C1 - contradictions involving the use of game programming
-            and asset authoring
-            tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-            -   [Using a starter game template within a code
-                playground](#using-a-starter-game-template-within-a-code-playground)
+    -   [Narrative exploration of key areas of contradictions emerging
+        in the game-making learning design (in P1
+        /P2?)](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2)
+        -   [C1 - Area of contradictions involving organisational issues
+            and the use of game programming and asset authoring
+            tools](#c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools)
+            -   [Narrative description of the needs and tensions of
+                design](#narrative-description-of-the-needs-and-tensions-of-design)
+            -   [Design description: Using a starter game template
+                within a code playground, and graphical asset authoring
+                tools](#design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools)
+            -   [Brief section on Impact](#brief-section-on-impact)
         -   [C2 - Contradictions associated with project navigation and
             use of
             documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [The use of documentation to address
-                contradictions](#the-use-of-documentation-to-address-contradictions)
+            -   [NEED - Tension](#need---tension)
+            -   [(DESIGN AND RESULTS) The use of documentation to
+                address
+                contradictions](#design-and-results-the-use-of-documentation-to-address-contradictions)
+                -   [Quick Start Cards](#quick-start-cards)
                 -   [Structuring instructional tutorial resources and
                     code
                     snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
+            -   [RESULTS / IMPACT / SIGNPOSTING /
+                LINK](#results-impact-signposting-link)
         -   [C3 - Responding to tensions and barriers in cultural
             aspects of the game making
             activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-            -   [Social coding processes](#social-coding-processes)
-                -   [Use of side missions to encourage varied creative
-                    practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+            -   [Playing games, identifying game elements & the use of
+                physical
+                materials](#playing-games-identifying-game-elements-the-use-of-physical-materials)
+            -   [Social coding processes - MIX OF NEED AND DESIGN AND
+                RESULT?](#social-coding-processes---mix-of-need-and-design-and-result)
+            -   [SUMMARY AND LINK](#summary-and-link)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Comparing to UMC, Microworlds & constructionist design
-            principles](#comparing-to-umc-microworlds-constructionist-design-principles)
-        -   [Authenticity Discussion](#authenticity-discussion)
-        -   [The position of GDPs in Activity Systems as the germ cell
-            of this
-            research](#the-position-of-gdps-in-activity-systems-as-the-germ-cell-of-this-research)
+        -   [Exploring systemic tensions in relation to existing
+            research](#exploring-systemic-tensions-in-relation-to-existing-research)
+        -   [DBR, CHAT & GDPs as the germ cell concept (unit of
+            analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis)
         -   [Outlining the key stages of GDP use in the structural
             learning
             design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
@@ -53,3 +63,4 @@
             above](#moved-from-graphical-assets-above)
         -   [Removed from Docs - add to appendix
             .tech](#removed-from-docs---add-to-appendix-.tech)
+        -   [Remove 20th April 25](#remove-20th-april-25)
