--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -6,10 +6,9 @@
     -   [Introduction](#introduction)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
-        -   [On learning map.](#on-learning-map.)
         -   [The interrelationship of GDPs and the development of
-            technical
-            processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
+            personal appropriation of skills and
+            processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
         -   [Use of a menu of GDPs to assist project navigation and
